@@ -1,4 +1,4 @@
-Copyright (c) 2008-2011 Thomas Perl <thp.io/about>
+Copyright (c) 2008-2014 Thomas Perl <thp.io/about>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
