@@ -3,7 +3,7 @@
 #
 # urlwatch is a minimalistic URL watcher written in Python
 #
-# Copyright (c) 2008-2011 Thomas Perl <thp.io/about>
+# Copyright (c) 2008-2014 Thomas Perl <thp.io/about>
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
@@ -37,12 +37,12 @@ that has changed and a unified diff of what has changed.
 """
 
 pkgname = 'urlwatch'
-COPYRIGHT = 'Copyright 2008-2013 Thomas Perl'
+COPYRIGHT = 'Copyright 2008-2014 Thomas Perl'
 
 __author__ = 'Thomas Perl <m@thp.io>'
 __license__ = 'BSD'
 __url__ = 'http://thp.io/2008/urlwatch/'
-__version__ = '1.15'
+__version__ = '1.16'
 
 user_agent = '%s/%s (+http://thp.io/2008/urlwatch/info.html)' % (pkgname, __version__)
 
